Title alignment issue

--- a/app/css/scss/nodetv.scss
+++ b/app/css/scss/nodetv.scss
@@ -473,10 +473,11 @@ input {
 			color: #FFFFFF;
 			font-weight: bold;
 			left: 5px;
+			line-height: 17px;
 			margin: 0px;
 			position: absolute;
 			right: 5px;
-			top: 17px;
+			top: 15px;
 			transition: opacity 0.5s;
 		}
 		img {
